--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 -->
     <div class="column-buttons">
-        <div class="top-button">
+        <div class="modal-button">
             <button id="bio">Bio</button>
         </div>
 
