accordion working how i want it to

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 -->
     <div class="column-buttons">
         <div class="modal-button">
-            <button id="bio" type="button">Bio</button>
+            <button id="bio" type="button">Click Here To Open Bio</button>
         </div>
         <div class="expand">
             <h2>Resume</h2>
@@ -38,11 +38,11 @@
                 <p>I have so much to say that i am going to put it right here in a p tag</p>
             </div>
         </div>
-        <div class="expand">
+        <div class="expand2">
             <h2>Portfolio</h2>
-            <div class="collapse">
+            <div class="collapse2">
                 <h1>This is my portfolio</h1>
-                <p>Coming soon!!..</p>
+                <p>Coming soon!!</p>
             </div>
         </div>
     </div>
