--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
 </head>
 
 <body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script:wght@500&family=Poiret+One&display=swap"
+        rel="stylesheet">
     <div class="container">
         <h1 id="name">Evin Lerouge</h1>
     </div>
     <div class="below-name">
         <h2 id="software-engineer">Aspiring Software Engineer</h2>
+    </div>
+    <div class="div-for-photo">
+        <img src="https://i.imgur.com/yQL6Kn5.jpg">
     </div>
     <!---- <nav>
         <a href=" ">Home</a>
@@ -28,20 +36,20 @@
     </nav>
 -->
     <div class="column-buttons">
-        <div class="modal-button">
-            <button id="bio" type="button">Click Here To Open Bio</button>
+        <div id="popup" class="modal-button">
+            <button id="bio" type="button">Bio</button>
         </div>
         <div class="expand">
             <h2>Resume</h2>
             <div class="collapse">
-                <h1>This is my resume</h1>
+                <h3>This is my resume</h3>
                 <p>I have so much to say that i am going to put it right here in a p tag</p>
             </div>
         </div>
         <div class="expand2">
             <h2>Portfolio</h2>
             <div class="collapse2">
-                <h1>This is my portfolio</h1>
+                <h3>This is my portfolio</h3>
                 <p>Coming soon!!</p>
             </div>
         </div>
