working on modal

--- a/index.html
+++ b/index.html
@@ -30,14 +30,10 @@
     <div class="column-buttons">
 
         <!--creating the modal pop up-->
-        <div class="modal-button">
-            <div class="modal-popup">
-                <h2>Bio</h2>
-                <p>This is my bio</p>
-                <button class="close">Close</button>
-            </div>
-            <h2>popup example</h2>
-            <button class="open">Open</button>
+        <button id="open-button">Click to Open Bio</button>
+        <div class="inside-popup">
+            <p>This is my bio bla hb aosdigladibfdabga;fibad'fobv'dofib ajodfihug apdf;ou</p>
+            <span class="close-button">Close</span>
         </div>
         <!--end of modal pop up code-->
 
@@ -45,21 +41,23 @@
             <h2 id="resume">Resume</h2>
             <div class="collapse">
                 <h3>This is my resume</h3>
-                <p>I have so much to say that i am going to put it right here in a p tag</p>
+                <p>I have so much to say that i am going to put it right here in a p tag blah
+                    blabhlahdishg;aidsjflakwjdbfksbv sdfhalsdfhas;dkjbd;kbfjs dhf;aksdfh;askdf;aksdjfbs;dkjfb</p>
             </div>
         </div>
         <div class="expand2">
             <h2 id="portfolio">Portfolio</h2>
             <div class="collapse2">
                 <h3>This is my portfolio</h3>
-                <p>Coming soon!!</p>
+                <p>Coming soon!! dksjlglakdfjbvlsdkfjbvldsfjb ;sd dfihg;sodihfg;sdfighs ;odifhg isdlfhg ;di hfg;ishf'g
+                    sdhf g;isdf hg'sdo fgd'h </p>
             </div>
         </div>
     </div>
     <footer>
         <div class="hover-buttons">
-            <button id="hover-linkedin" type="button">LinkedIn</button>
-            <button id="hover-github" type="button">Github</button>
+            <a id="hover-linkedin" href="www.linkedin.com/in/evin-lerouge-2ab5671ba">LinkedIn</a>
+            <a id="hover-github" href="https://github.com/evrouge/evrouge.git">Github</a>
         </div>
     </footer>
 </body>
