woohoo modal opening and closing

--- a/index.html
+++ b/index.html
@@ -27,20 +27,28 @@
     <div class="div-for-photo">
         <img src="https://i.imgur.com/yQL6Kn5.jpg" alt="Evin at Mount Whitney's Trail Camp">
     </div>
+
     <div class="column-buttons">
+
+
 
         <!--creating the modal pop up-->
         <button id="open-button">Click to Open Bio</button>
-        <div class="inside-popup">
-            <p>This is my bio bla hb aosdigladibfdabga;fibad'fobv'dofib ajodfihug apdf;ou</p>
-            <span class="close-button">Close</span>
+        <div id="inside">
+            <p>This is whwere i put info about bio</p>
+            <div id="close">
+                <div id="close-button">Close</div>
+            </div>
         </div>
         <!--end of modal pop up code-->
+
+
+
 
         <div class="expand">
             <h2 id="resume">Resume</h2>
             <div class="collapse">
-                <h3>This is my resume</h3>
+                <h3>My Resume</h3>
                 <p>I have so much to say that i am going to put it right here in a p tag blah
                     blabhlahdishg;aidsjflakwjdbfksbv sdfhalsdfhas;dkjbd;kbfjs dhf;aksdfh;askdf;aksdjfbs;dkjfb</p>
             </div>
@@ -48,7 +56,7 @@
         <div class="expand2">
             <h2 id="portfolio">Portfolio</h2>
             <div class="collapse2">
-                <h3>This is my portfolio</h3>
+                <h3>My Portfolio</h3>
                 <p>Coming soon!! dksjlglakdfjbvlsdkfjbvldsfjb ;sd dfihg;sodihfg;sdfighs ;odifhg isdlfhg ;di hfg;ishf'g
                     sdhf g;isdf hg'sdo fgd'h </p>
             </div>
@@ -59,6 +67,7 @@
             <a id="hover-linkedin" href="www.linkedin.com/in/evin-lerouge-2ab5671ba">LinkedIn</a>
             <a id="hover-github" href="https://github.com/evrouge/evrouge.git">Github</a>
         </div>
+    </footer>
     </footer>
 </body>
 
