modal is working

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!--creating the modal pop up-->
         <button id="open-button">Click to Open Bio</button>
         <div id="inside">
-            <p>This is whwere i put info about bio</p>
+            <p id="inside-modal-bio">This is whwere i put info about bio</p>
             <div id="close">
                 <div id="close-button">Close</div>
             </div>
