--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
         <!--creating the modal pop up-->
         <button id="open-button">Click to Open Bio</button>
         <div id="inside">
-            <p id="inside-modal-bio">This is whwere i put info about bio</p>
+            <p id="inside-modal-bio">Hi! I am Evin. I am 29 years old, and have a background in childcare. I started to
+                switch over to teaching, but found quickly that it was not for me, and found coding! I have found that I
+                wanted something that allowed me to be creative and use my problem-solving abilities to be satisfied in
+                a career. I started out by getting a book and coding with Python, and became interested in front-end
+                coding, so I joined General Assembly! In my free time I love mountaineering, climbing, hiking, running,
+                and playing with my dog. </p>
             <div id="close">
                 <div id="close-button">Close</div>
             </div>
@@ -49,16 +54,17 @@
             <h2 id="resume">Resume</h2>
             <div class="collapse">
                 <h3>My Resume</h3>
-                <p>I have so much to say that i am going to put it right here in a p tag blah
-                    blabhlahdishg;aidsjflakwjdbfksbv sdfhalsdfhas;dkjbd;kbfjs dhf;aksdfh;askdf;aksdjfbs;dkjfb</p>
+                <p>I started General Assembly October 2022 and have a background in childcare.</p>
             </div>
         </div>
         <div class="expand2">
             <h2 id="portfolio">Portfolio</h2>
             <div class="collapse2">
                 <h3>My Portfolio</h3>
-                <p>Coming soon!! dksjlglakdfjbvlsdkfjbvldsfjb ;sd dfihg;sodihfg;sdfighs ;odifhg isdlfhg ;di hfg;ishf'g
-                    sdhf g;isdf hg'sdo fgd'h </p>
+                <p> Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission:
+                    to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man
+                    has gone before. Many say exploration is part of our destiny, but it’s actually our duty to future
+                    generations and their quest to ensure the survival of the human species. </p>
             </div>
         </div>
     </div>
