--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script:wght@500&family=Poiret+One&display=swap"
         rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Barlow+Condensed:wght@300&family=Dancing+Script:wght@500&family=Poiret+One&family=Quicksand&display=swap"
+        rel="stylesheet">
     <div class="container">
         <h1 id="name">Evin Lerouge</h1>
     </div>
