added in comments

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--Google fonts happening here-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -27,13 +28,14 @@
     <div class="below-name">
         <h2 id="software-engineer">Aspiring Software Engineer</h2>
     </div>
+
+    <!--Made a separate div for the photo so I could resize and center it-->
     <div class="div-for-photo">
         <img src="https://i.imgur.com/yQL6Kn5.jpg" alt="Evin at Mount Whitney's Trail Camp">
     </div>
 
+    <!--created this div to put all of the buttons in the center of the page-->
     <div class="column-buttons">
-
-
 
         <!--creating the modal pop up-->
         <button id="open-button">Click to Open Bio</button>
@@ -48,11 +50,11 @@
                 <div id="close-button">Close</div>
             </div>
         </div>
-        <!--end of modal pop up code-->
+        <!--End of modal pop up code-->
 
 
 
-
+        <!--Accordion for my Resume and Portfolio buttons-->
         <div class="expand">
             <h2 id="resume">Resume</h2>
             <div class="collapse">
@@ -72,9 +74,10 @@
         </div>
     </div>
     <footer>
+        <!--Div in the footer with my buttons that take you to links at the bottom of the page-->
         <div class="hover-buttons">
-            <a id="hover-linkedin" href="www.linkedin.com/in/evin-lerouge-2ab5671ba">LinkedIn</a>
-            <a id="hover-github" href="https://github.com/evrouge/evrouge.git">Github</a>
+            <a id="hover-linkedin" href="https://www.linkedin.com/in/evinlerouge/">LinkedIn</a>
+            <a id="hover-github" href="https://github.com/evrouge?tab=repositories">Github</a>
         </div>
     </footer>
     </footer>
