think this is the picture i want to keep here

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!--Made a separate div for the photo so I could resize and center it-->
     <div class="div-for-photo">
-        <img src="https://i.imgur.com/yQL6Kn5.jpg" alt="Evin at Mount Whitney's Trail Camp">
+        <img src="https://i.imgur.com/k52naJV.jpg" alt="Climbing Mount St. Helens">
     </div>
 
     <!--created this div to put all of the buttons in the center of the page-->
