more styling added today

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     </div>
     <div class="below-name">
         <h2 id="software-engineer">Aspiring Software Engineer</h2>
+        <a href="index.html" class="homepage">Home</a>
     </div>
+
 
     <!--Made a separate div for the photo so I could resize and center it-->
     <div class="div-for-photo">
@@ -38,18 +40,17 @@
 
 
     <!--creating the modal pop up-->
-    <div class="div-for-button">
-        <button id="open-button">Click to Open Bio</button>
-    </div>
-    <div id="inside">
-        <p id="inside-modal-bio">Hi! I am Evin. I am 29 years old, and have a background in childcare. I started to
-            switch over to teaching, but found quickly that it was not for me, and found coding! I have found that I
-            wanted something that allowed me to be creative and use my problem-solving abilities to be satisfied in
-            a career. I started out by getting a book and coding with Python, and became interested in front-end
-            coding, so I joined General Assembly! In my free time I love mountaineering, climbing, hiking, running,
-            and playing with my dog. </p>
-        <div id="close">
-            <div id="close-button">Close</div>
+    <div class="'modal-container">
+        <div class="div-for-button">
+            <button id="open-button">Click to Open Bio</button>
+        </div>
+        <div id="inside">
+            <p id="inside-modal-bio">Hi! I'm Evin. When I'm not coding you can find me climbing a peak, climbing rock
+                walls, running, painting, and playing my dog. </p>
+            <img id="modal-pic" src="https://i.imgur.com/RPID3C6.jpg">
+            <div id="close">
+                <div id="close-button">Close</div>
+            </div>
         </div>
     </div>
     <!--End of modal pop up code-->
@@ -74,15 +75,19 @@
                 generations and their quest to ensure the survival of the human species. </p>
         </div>
     </div>
-
-    <footer>
-        <!--Div in the footer with my buttons that take you to links at the bottom of the page-->
-        <div class="hover-buttons">
-            <a id="hover-linkedin" href="https://www.linkedin.com/in/evinlerouge/">LinkedIn</a>
-            <a id="hover-github" href="https://github.com/evrouge?tab=repositories">Github</a>
+    <div class="expand3">
+        <h2 id="contact">Contact Me</h2>
+        <div class="collapse3">
+            <h3>Contact Information</h3>
+            <p>email: evinlerouge@icloud.com</p>
         </div>
-    </footer>
-    </footer>
+        <footer>
+            <!--Div in the footer with my buttons that take you to links at the bottom of the page-->
+            <div class="hover-buttons">
+                <a id="hover-linkedin" href="https://www.linkedin.com/in/evinlerouge/">LinkedIn</a>
+                <a id="hover-github" href="https://github.com/evrouge?tab=repositories">Github</a>
+            </div>
+        </footer>
 </body>
 
 
