added paintings to portfolio

--- a/index.html
+++ b/index.html
@@ -26,17 +26,23 @@
         <h1 id="name">Evin Lerouge</h1>
     </div>
     <div class="below-name">
-        <h2 id="software-engineer">Aspiring Software Engineer</h2>
+        <h2 id="software-engineer">Aspiring Software Engineer and Adventurer</h2>
         <a href="index.html" class="homepage">Home</a>
     </div>
+
+
+    <!--This would be where I would put a carousel-->
+
+
+
+
+    <!--This would be the end of the carousel-->
 
 
     <!--Made a separate div for the photo so I could resize and center it-->
     <div class="div-for-photo">
         <img src="https://i.imgur.com/k52naJV.jpg" alt="Climbing Mount St. Helens">
     </div>
-
-    <!--created this div to put all of the buttons in the center of the page-->
 
 
     <!--creating the modal pop up-->
@@ -47,7 +53,7 @@
         <div id="inside">
             <p id="inside-modal-bio">Hi! I'm Evin. When I'm not coding you can find me climbing a peak, climbing rock
                 walls, running, painting, and playing my dog. </p>
-            <img id="modal-pic" src="https://i.imgur.com/RPID3C6.jpg">
+            <img id="modal-pic" src="https://i.imgur.com/8WU0GNr.jpg" alt="Climbing Mt. Adams">
             <div id="close">
                 <div id="close-button">Close</div>
             </div>
@@ -68,11 +74,15 @@
     <div class="expand2">
         <h2 id="portfolio">Portfolio</h2>
         <div class="collapse2">
-            <h3>My Portfolio</h3>
-            <p> Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission:
-                to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man
-                has gone before. Many say exploration is part of our destiny, but it’s actually our duty to future
-                generations and their quest to ensure the survival of the human species. </p>
+            <div class="'paintings">
+                <h3>My Portfolio</h3>
+                <p>Some of my paintings for now:</p>
+                <p>
+                    <img id="boof" src="https://i.imgur.com/owXXy3x.jpg" alt="My dog Olive">
+                    <img id="toucan" src="https://i.imgur.com/dzMJVlB.jpg" alt="Watercolor toucan">
+                    <img id="hummingbird" src="https://i.imgur.com/Vu8bKIu.jpg" alt="Watercolor hummingbird">
+                </p>
+            </div>
         </div>
     </div>
     <div class="expand3">
