--- a/index.html
+++ b/index.html
@@ -26,33 +26,23 @@
         <h1 id="name">Evin Lerouge</h1>
     </div>
     <div class="below-name">
-        <h2 id="software-engineer">Aspiring Software Engineer and Adventurer</h2>
-        <a href="index.html" class="homepage">Home</a>
+        <h2 id="software-engineer">Software Engineer, Adventurer, and Painter</h2>
     </div>
-
-
-    <!--This would be where I would put a carousel-->
-
-
-
-
-    <!--This would be the end of the carousel-->
-
 
     <!--Made a separate div for the photo so I could resize and center it-->
     <div class="div-for-photo">
         <img src="https://i.imgur.com/k52naJV.jpg" alt="Climbing Mount St. Helens">
     </div>
 
-
     <!--creating the modal pop up-->
-    <div class="'modal-container">
+    <div class="modal-container">
         <div class="div-for-button">
             <button id="open-button">Click to Open Bio</button>
         </div>
         <div id="inside">
-            <p id="inside-modal-bio">Hi! I'm Evin. When I'm not coding you can find me climbing a peak, climbing rock
-                walls, running, painting, and playing my dog. </p>
+            <p id="inside-modal-bio">Hi! I'm Evin. When I'm not coding you can find me climbing a peak, running,
+                climbing rock
+                walls, painting, and playing with my dog. </p>
             <img id="modal-pic" src="https://i.imgur.com/8WU0GNr.jpg" alt="Climbing Mt. Adams">
             <div id="close">
                 <div id="close-button">Close</div>
@@ -60,8 +50,6 @@
         </div>
     </div>
     <!--End of modal pop up code-->
-
-
 
     <!--Accordion for my Resume and Portfolio buttons-->
     <div class="expand">
@@ -97,8 +85,10 @@
                 <a id="hover-linkedin" href="https://www.linkedin.com/in/evinlerouge/">LinkedIn</a>
                 <a id="hover-github" href="https://github.com/evrouge?tab=repositories">Github</a>
             </div>
+            <div class="homepage">
+                <a href="index.html" id="home">Home</a>
+            </div>
         </footer>
 </body>
-
 
 </html>
