last touches now

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <div class="expand2">
         <h2 id="portfolio">Portfolio</h2>
         <div class="collapse2">
-            <div class="'paintings">
-                <h3>My Portfolio</h3>
+            <h3>My Portfolio</h3>
+            <div class="paintings">
                 <p>Some of my paintings for now:</p>
                 <p>
                     <img id="boof" src="https://i.imgur.com/owXXy3x.jpg" alt="My dog Olive">
@@ -79,16 +79,17 @@
             <h3>Contact Information</h3>
             <p>email: evinlerouge@icloud.com</p>
         </div>
-        <footer>
-            <!--Div in the footer with my buttons that take you to links at the bottom of the page-->
-            <div class="hover-buttons">
-                <a id="hover-linkedin" href="https://www.linkedin.com/in/evinlerouge/">LinkedIn</a>
-                <a id="hover-github" href="https://github.com/evrouge?tab=repositories">Github</a>
-            </div>
-            <div class="homepage">
-                <a href="index.html" id="home">Home</a>
-            </div>
-        </footer>
+    </div>
+    <footer>
+        <!--Div in the footer with my buttons that take you to links at the bottom of the page-->
+        <div class="hover-buttons">
+            <a id="hover-linkedin" href="https://www.linkedin.com/in/evinlerouge/">LinkedIn</a>
+            <a id="hover-github" href="https://github.com/evrouge?tab=repositories">Github</a>
+        </div>
+        <div class="homepage">
+            <a href="index.html" id="home">Home</a>
+        </div>
+    </footer>
 </body>
 
 </html>
